--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div class="hearts" id="hearts"></div>
-    <h1>可以和我共度余生吗？💖</h1>
+    <h1>可以和岳帅共度余生吗？💖</h1>
     
     <button id="yes" onclick="showLove()">好呀，我愿意！</button>
     <button id="no" onclick="shrink()">让我再想想...</button>
